@@ -1,0 +1,18 @@
+<HTML>
+<HEAD>
+	<TITLE>Link Test</TITLE>
+</HEAD>
+<BODY>
+
+<H1>Link Test</H1>
+
+<P>This is a <A HREF="#link">link test</A>.
+
+<P>Click on this image: <A HREF="#link"><IMG SRC="left.gif"></A>.
+
+<!-- NEW PAGE -->
+
+<P><A NAME="link">This is the target of the link.</A>
+
+</BODY>
+</HTML>
